minijinja/tests/snapshots/test_compiler__bool_ops.snap
---
source: minijinja/tests/test_compiler.rs
expression: "&c"
---
CodeGenerator {
    instructions: [
        00000 | Lookup("first")  [line 0],
        00001 | JumpIfFalseOrPop(5),
        00002 | Lookup("second"),
        00003 | JumpIfTrueOrPop(5),
        00004 | Lookup("third"),
    ],
    blocks: {},
    pending_block: [],
    macros: {},
    current_line: 0,
}
