minijinja/tests/snapshots/test_compiler__const.snap
---
source: minijinja/tests/test_compiler.rs
expression: "&c"
---
Compiler {
    instructions: [
        00000 | LOAD_CONST (value "a")  [line 0],
        00001 | LOAD_CONST (value 42),
        00002 | STRING_CONCAT,
    ],
    blocks: {},
    macros: {},
    pending_block: [],
    current_line: 0,
}
