minijinja/tests/snapshots/test_compiler__if_branches.snap
---
source: minijinja/tests/test_compiler.rs
expression: "&c"
---
Compiler {
    instructions: [
        00000 | LOOKUP (var "false")  [line 0],
        00001 | JUMP_IF_FALSE (to 00004),
        00002 | EMIT_RAW (string "nope1"),
        00003 | JUMP (to 00009),
        00004 | LOOKUP (var "nil"),
        00005 | JUMP_IF_FALSE (to 00008),
        00006 | EMIT_RAW (string "nope1"),
        00007 | JUMP (to 00009),
        00008 | EMIT_RAW (string "yes"),
    ],
    blocks: {},
    macros: {},
    pending_block: [],
    current_line: 0,
}
